# publisher

./: .gitignore  LICENSE  README.md  SKILL.md  install.ps1  install.sh  package.json
.github/workflows/: ci.yml  release.yml
Formula/: neboai.rb
cli/: Cargo.toml  build-all.sh
cli/src/: api.rs  auth.rs  detect.rs  main.rs  publish.rs  validate.rs
examples/agent-example/: AGENT.md  agent.json
examples/app-example/: AGENT.md  agent.json  manifest.json
examples/app-example/skills/workspace-mgmt/: SKILL.md
examples/app-example/ui/: app.js  index.html  style.css
examples/plugin-example/: PLUGIN.md  plugin.json
examples/skill-example/: SKILL.md
references/: agent-format.md  app-format.md  building-agents.md  building-apps.md  building-plugins.md  building-skills.md  collection-format.md  common-mistakes.md  connector-format.md  listing-quality.md  plugin-format.md  review-rubric.md  skill-format.md
scripts/: postinstall.js  validate.sh
